--- a/src/app/core/admin/audit/audit.component.html
+++ b/src/app/core/admin/audit/audit.component.html
@@ -12,8 +12,18 @@
 
 <div class=" container-fluid mt--6">
 
+  <div class="row">
+    <div class="col">
+        <div class="card">
+            <div style="height: 410px; padding-top: 10px">
+                <div id="chartdiv" style="width: 100%; height: 100%"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
   <div class=" row">
-    <div class=" col-xl-8">
+    <div class=" col-xl-12">
       <div class=" card">
         <div class=" card-header border-0 bg-secondary">
           <div class=" row align-items-center">
@@ -63,34 +73,6 @@
               
             </tbody>
           </table>
-        </div>
-      </div>
-    </div>
-
-    <div class=" col-xl-4">
-      <div class=" card">
-        <div class=" card-header border-0 bg-secondary">
-          <div class=" row align-items-center">
-            <div class=" col"><h3 class=" mb-0">Statistik Audit</h3></div>
-
-            <div class=" col text-right">
-              <a class=" btn btn-sm btn-primary" href="javascript:void(0)">
-                Lihat semua
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-            <div class="chart">
-                <fusioncharts
-                [width]="width"
-                [height]="height"
-                [type]="type"
-                [dataFormat]="dataFormat"
-                [dataSource]="dataSource"
-                >
-                </fusioncharts>
-            </div>
         </div>
       </div>
     </div>
