--- a/src/app/core/admin/laporan/laporan.component.html
+++ b/src/app/core/admin/laporan/laporan.component.html
@@ -48,6 +48,22 @@
     </div>
   </div>
   <div class="row">
+    <div class="col">
+      <div class="card">
+        <div style="height: 410px; padding-top: 10px">
+          <div id="chartdiv" style="width: 100%; height: 100%"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div style="height: 410px; padding-top: 10px">
+          <div id="chartdiv1" style="width: 100%; height: 100%"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
     <div class="col-xl-12">
       <div class="card">
         <div class="card-header bg-secondary">
