--- a/src/app/core/admin/tiket/tiket.component.html
+++ b/src/app/core/admin/tiket/tiket.component.html
@@ -13,6 +13,16 @@
 <div class="container-fluid mt--6">
 
     <div class="row">
+        <div class="col">
+            <div class="card">
+                <div style="height: 410px; padding-top: 10px">
+                    <div id="chartdiv" style="width: 100%; height: 100%"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-xl-12">
             <div class="card">
                 <div class="card-header border-0 bg-secondary">
@@ -173,7 +183,7 @@
                 <div class="card-header border-0 bg-secondary">
                     <div class="row">
                         <div class="col-lg-8 text-left">
-                            <h4 class="mb-0">Senarai Tiket</h4>
+                            <h4 class="mb-0">Senarai Tiket Lepas</h4>
                         </div>
                         <div class="col-lg-4 text-right">
                             <a class="btn btn-sm btn-primary" href="javascript:void(0)">
